objects/SBQQ__ProcessInput__c.object
<CustomObject>
    <customHelpPage>SBQQ__ProcessInputHelp</customHelpPage>
    <description>Input into a quote process. Information collected by inputs can be used to drive product selection and configuration.</description>
    <fields>
        <fullName>Automation__c</fullName>
        <description>Field used for Guided Selling</description>
        <label>Automation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Manual</fullName>
                </value>
                <value>
                    <fullName>Automated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barcode__c</fullName>
        <description>Field used for Guided Selling</description>
        <label>Barcode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Cell Surface Protein</fullName>
                </value>
                <value>
                    <fullName>CRISPR Screening</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DeliveryType__c</fullName>
        <description>Question first Guided Selling Delivery OTT services selection</description>
        <label>Delivery Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New Platform</fullName>
                </value>
                <value>
                    <fullName>New Geo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSign_Plan_Term__c</fullName>
        <description>Term for DocuSign Plan</description>
        <label>DocuSign Plan Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DocuSign_Plan_Type__c</fullName>
        <description>Plans offered by DocuSign</description>
        <label>DocuSign Plan Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>eSignature</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>API</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MonetizeType__c</fullName>
        <description>Question first Guided Selling Monetize services selection</description>
        <label>Monetize Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>TS Setup Fee</fullName>
                </value>
                <value>
                    <fullName>OTT Platform</fullName>
                </value>
                <value>
                    <fullName>Content Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this process input is active.</description>
        <inlineHelpText>Select the checkbox to activate this process input.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__BinaryChoice__c</fullName>
        <label>Binary Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Indicates which Process Input conditions must be met.</description>
        <inlineHelpText>Indicate which Process Input conditions must be met.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DefaultField__c</fullName>
        <description>Quote field that sources default value for this input.</description>
        <inlineHelpText>Quote field that sources default value for this input.</inlineHelpText>
        <label>Default Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To Country</fullName>
                </value>
                <value>
                    <fullName>Ship To Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The order that the process input is displayed.</description>
        <inlineHelpText>Enter the order that the process input should be displayed.</inlineHelpText>
        <label>Display Order</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__InputField__c</fullName>
        <description>The API name for the field that accepts the user entry.</description>
        <inlineHelpText>Select the API name for the field that accepts the user entry.</inlineHelpText>
        <label>Input Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BinaryChoice__c</fullName>
                </value>
                <value>
                    <fullName>IntegerInput__c</fullName>
                </value>
                <value>
                    <fullName>Screen_Size__c</fullName>
                </value>
                <value>
                    <fullName>Screen_Type__c</fullName>
                </value>
                <value>
                    <fullName>DocuSign_Plan_Type__c</fullName>
                </value>
                <value>
                    <fullName>DocuSign_Plan_Term__c</fullName>
                </value>
                <value>
                    <fullName>Version__c</fullName>
                </value>
                <value>
                    <fullName>Type__c</fullName>
                </value>
                <value>
                    <fullName>Barcode__c</fullName>
                </value>
                <value>
                    <fullName>Automation__c</fullName>
                </value>
                <value>
                    <fullName>DeliveryType__c</fullName>
                </value>
                <value>
                    <fullName>MonetizeType__c</fullName>
                </value>
                <value>
                    <fullName>SaaSServiceType__c</fullName>
                </value>
                <value>
                    <fullName>ServiceType__c</fullName>
                </value>
                <value>
                    <fullName>SetupType__c</fullName>
                </value>
                <value>
                    <fullName>SolutionCoreType__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__IntegerInput__c</fullName>
        <inlineHelpText>Enter a numerical value.</inlineHelpText>
        <label>Integer Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Label__c</fullName>
        <description>Label for this filter.</description>
        <inlineHelpText>The text that you want displayed to the user in the prompt.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Operator__c</fullName>
        <description>The operator used when comparing the Input Field entry with the Product Field.</description>
        <inlineHelpText>Select the operator to use when comparing the Input Field entry with the Product Field.</inlineHelpText>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equals</fullName>
                </value>
                <value>
                    <fullName>not equals</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less or equals</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater or equals</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>ends with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ProcessInputCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Input Condition</label>
        <referenceTo>SBQQ__ProcessInputCondition__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>ProcessInputCondition</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__ProductField__c</fullName>
        <description>Field on Product object used in filtering products that match this input.</description>
        <inlineHelpText>Field on Product object used in filtering products that match this input.</inlineHelpText>
        <label>Product Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Name</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
                <value>
                    <fullName>Screen_Size__c</fullName>
                </value>
                <value>
                    <fullName>Screen_Type__c</fullName>
                </value>
                <value>
                    <fullName>DocuSign_Plan_Type__c</fullName>
                </value>
                <value>
                    <fullName>DocuSign_Plan_Term__c</fullName>
                </value>
                <value>
                    <fullName>Version__c</fullName>
                </value>
                <value>
                    <fullName>Type__c</fullName>
                </value>
                <value>
                    <fullName>Barcode__c</fullName>
                </value>
                <value>
                    <fullName>Automation__c</fullName>
                </value>
                <value>
                    <fullName>DeliveryType__c</fullName>
                </value>
                <value>
                    <fullName>MonetizeType__c</fullName>
                </value>
                <value>
                    <fullName>SaaSServiceType__c</fullName>
                </value>
                <value>
                    <fullName>ServiceType__c</fullName>
                </value>
                <value>
                    <fullName>SetupType__c</fullName>
                </value>
                <value>
                    <fullName>SolutionCoreType__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__QuoteProcess__c</fullName>
        <description>Quote process that owns the input.</description>
        <inlineHelpText>Quote process that owns the input.</inlineHelpText>
        <label>Quote Process</label>
        <referenceTo>SBQQ__QuoteProcess__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>Inputs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SaaSServiceType__c</fullName>
        <description>Question first Guided Selling Channel Creation &amp; Playout services selection</description>
        <label>SaaS Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Setup</fullName>
                </value>
                <value>
                    <fullName>Solution Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screen_Size__c</fullName>
        <description>Screen size for Monitor Product.</description>
        <label>Screen Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>18 &quot;</fullName>
                </value>
                <value>
                    <fullName>21 &quot;</fullName>
                </value>
                <value>
                    <fullName>24 &quot;</fullName>
                </value>
                <value>
                    <fullName>27 &quot;</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Screen_Type__c</fullName>
        <description>Screen type for Monitor Product.</description>
        <label>Screen Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HD</fullName>
                </value>
                <value>
                    <fullName>FHD</fullName>
                </value>
                <value>
                    <fullName>4K</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ServiceType__c</fullName>
        <description>First question Guided Selling field for Amagi</description>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Channel Creation &amp; Playout (SaaS)</fullName>
                </value>
                <value>
                    <fullName>Delivery OTT</fullName>
                </value>
                <value>
                    <fullName>Monetize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SetupType__c</fullName>
        <description>Question first Guided Selling Channel Creation &amp; Playout services Setup selection</description>
        <label>Setup Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Non Standard</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SolutionCoreType__c</fullName>
        <description>Question first Guided Selling Channel Creation &amp; Playout services Solution Core selection</description>
        <label>Solution Core Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Playout Format</fullName>
                </value>
                <value>
                    <fullName>Playout Addons</fullName>
                </value>
                <value>
                    <fullName>Playout Services</fullName>
                </value>
                <value>
                    <fullName>Scheduling Services</fullName>
                </value>
                <value>
                    <fullName>Creative Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Field used for guided selling</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Whole Transcriptome</fullName>
                </value>
                <value>
                    <fullName>Targeted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Field used for Guided Selling</description>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>v3.1 – Dual Index</fullName>
                </value>
                <value>
                    <fullName>v3.1 – Single Index</fullName>
                </value>
                <value>
                    <fullName>v3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Process Input</label>
    <listViews>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>NAME</columns>
        <columns>SBQQ__InputField__c</columns>
        <columns>SBQQ__ProductField__c</columns>
        <columns>SBQQ__Operator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Input Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Inputs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__ProductFieldAndOperatorSet</fullName>
        <active>true</active>
        <description>If a Product Field is defined, an Operator must also be defined.</description>
        <errorConditionFormula>OR(AND(!ISBLANK(TEXT(SBQQ__ProductField__c)),(ISBLANK(TEXT(SBQQ__Operator__c)))),AND(ISBLANK(TEXT(SBQQ__ProductField__c)),(!ISBLANK(TEXT(SBQQ__Operator__c)))))</errorConditionFormula>
        <errorMessage>Both Product Field and Operator must be set if either are set.</errorMessage>
    </validationRules>
</CustomObject>